--- a/OpenStack/mariadb-apb/roles/provision-mariadb-apb/defaults/main.yaml
+++ b/OpenStack/mariadb-apb/roles/provision-mariadb-apb/defaults/main.yaml
@@ -1,2 +1,3 @@
-registry="172.30.202.25:5000/"  # Don't forget the trailing '/'
-namespace="osp-dev"
+---
+registry: "172.30.202.25:5000/"    # Don't forget the trailing '/'
+namespace: "osp-dev"
